--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,7 +10,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git 'https://github.com/Bhagyashah05/calc-sci-mini'
+                git 'https://github.com/Bhagyashah05/calc-sci-mini.git'
             }
         }
 
