--- a/JenkinsFile
+++ b/JenkinsFile
@@ -49,17 +49,23 @@ pipeline {
 
         stage('Push Backend Image to DockerHub') {
             steps {
-                withDockerRegistry([credentialsId: 'docker-credentials', url: '']) {
-                    sh "docker push ${BE_IMAGE}:latest"
+                script {
+                    docker.withRegistry('https://index.docker.io/v1/', 'docker-credentials') {
+                        sh "docker push ${BE_IMAGE}:latest"
+                    }
                 }
             }
         }
 
+
+
         stage('Push Frontend Image to DockerHub') {
             steps {
-                withDockerRegistry([credentialsId: 'docker-credentials', url: '']) {
-                    sh "docker push ${FE_IMAGE}:latest"
-                }
+                script {
+                    docker.withRegistry('https://index.docker.io/v1/', 'docker-credentials') {
+                         sh "docker push ${FE_IMAGE}:latest"
+                        }
+                    }
             }
         }
 
